--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-   
+   width: 100%;
 }
 main{
     
@@ -27,6 +27,8 @@ h2{
 }
 nav{
     text-align: right;
+    position: relative;
+    bottom: 35px;
     
 }
 footer{
@@ -34,3 +36,4 @@ footer{
     text-align: center;
 
 }
+
